Fixed the arrow icon for page toggling for the index on light mode to be more visible upon hover

--- a/css/darkmode.scss
+++ b/css/darkmode.scss
@@ -74,3 +74,16 @@ a.link-title{
 		color:#DDD;
 	}
 }
+
+.index-nextPageToggle{
+	&-right{
+		&:hover{
+			color:#DDD;
+		}
+	}
+	&-left{
+		&:hover{
+			color:#DDD;
+		}
+	}
+}
