--- a/css/style.scss
+++ b/css/style.scss
@@ -342,7 +342,7 @@ table.quiz-table{
 		padding-right:20px;
 		color:#999;
 		&:hover{
-			color:#DDD;
+			color:#333;
 		}
 	}
 }
